# parqcast-lambda

./: .gitignore  README.md  pyproject.toml
demo-lambda/: event.json  template.yaml
demo-lambda/src/: app.py  requirements.txt
